<resources>
    <string name="app_name">PracticalAssignment</string>
    <string name="login_title">Tangent Solutions</string>
    <string name="employees">Employees</string>
    <string name="birthdays">Birthdays</string>
    <string name="position_data">Position data</string>
    <string name="reviews">Reviews</string>
    <string name="profile">Profile</string>
    <string name="staticstics">Statistics</string>
    <string name="label_name">Name : </string>
    <string name="label_status">Status : </string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender_count">Gender Count</string>
    <string name="total_count">Total Count : </string>
    <string name="junior_count">Junior Count : </string>
    <string name="senior_count">Senior Count : </string>
</resources>
